--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
